favicon, icones, footer e alt

--- a/project-v1.0.0/public/index.html
+++ b/project-v1.0.0/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link href="index.css" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" width='32px' height='32px'/>
+    <title>GreenShop Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
