--- a/project-v1.0.0/public/index.html
+++ b/project-v1.0.0/public/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
-  <body className=".body">
+  <body className="body">
     <div id="root"></div>
   </body>
 </html>
